...
    android:background="#808080"
    android:orientation="vertical"
    android:paddingHorizontal="2dp"
    android:paddingVertical="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/todo_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/todo_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/todo_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                app:layout_constraintTop_toBottomOf="@+id/todo_title_view" />
...
                android:id="@+id/todo_date_view"
                android:layout_width="89dp"
                android:layout_height="17dp"
                android:ems="10"
                android:focusable="true"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/todo_reminder_view"
                android:layout_width="125dp"
                android:layout_height="17dp"
                android:ems="10"
                android:focusable="true"

                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/priority_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Due Date: "
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_description_view" />

            <TextView
...
